--- a/public/styles/scss/_config.scss
+++ b/public/styles/scss/_config.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
 @font-face {
-  font-family: 'Haas';
-  src: url('/NeueHaasGrotDisp-55Roman.otf') format('woff'),
+  font-family: 'Kobe';
+  src: url('/Kobe1.1-Regular.woff') format('woff'),
 
 }
 
