--- a/public/styles/scss/_vars.scss
+++ b/public/styles/scss/_vars.scss
@@ -1,6 +1,9 @@
 $dark: #201F1F;
-$light: white;
+$light: rgb(249, 247, 241);
 $lightBlue: #A1CBD3;
 $lightGreen: #11A972;
 $yellow: #F0D549;
+$red: #d95133;
+$blue: #276dc9;
+
 
