--- a/public/styles/scss/_wraps.scss
+++ b/public/styles/scss/_wraps.scss
@@ -1,5 +1,13 @@
+body {
+  overflow-x: hidden;
+}
+
 .o-wrapper {
   padding: 0 4em;
+}
+
+.vision-section {
+  z-index: -1;
 }
 
 @media screen and (min-width: 1400px) {
