--- a/public/styles/scss/_components.scss
+++ b/public/styles/scss/_components.scss
@@ -1,6 +1,13 @@
-a {
+a,
+ul,
+li {
 	text-decoration: none;
-	color: text-clr(black);
+	color: black;
+	list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 200;
 }
 
 button:hover,
@@ -14,19 +21,98 @@ a:hover {
 	z-index: 9999;
 	background-color: white;
 	transform: translateY(-100%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	.viewport-nav__inner {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: row-reverse;
+		padding: 0.9rem;
+
+		.right-col {
+			width: 80%;
+			margin: 0 1.4rem;
+			ul li {
+				font-size: 9vw;
+				position: relative;
+				line-height: 10.5vw;
+				transition: 300ms ease;
+
+				&:hover {
+					background-color: $dark;
+
+					&:last-of-type:hover #viewport-nav__arrow {
+						fill: $light;
+					}
+
+					a {
+						color: $light;
+						transition: 300ms ease;
+					}
+				}
+
+				a {
+					height: 100%;
+				}
+
+				&::before {
+					content: "";
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					height: 1px;
+					width: 100%;
+					background-color: $dark;
+
+					transform-origin: right;
+				}
+			}
+
+			.arrow-container {
+				display: inline;
+				position: relative;
+
+				#viewport-nav__arrow,
+				#viewport-nav__arrow-2 {
+					fill: $dark;
+					transition: 300ms ease;
+					width: 6vw;
+				}
+
+				#viewport-nav__arrow-2 {
+					position: absolute;
+					top: 0;
+					left: 0;
+				}
+			}
+		}
+
+		.left-col {
+			width: 20%;
+			border-right: 1px solid $dark;
+			display: flex;
+		}
+	}
 
 	.viewport-nav__exit-btn {
-		
-    border: 0px;
-    width: 3.1rem;
-    height: 3.1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    padding: 0.4rem;
-		
+		border: 0px;
+		width: 3.1rem;
+		height: 3.1rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+
+		padding: 0.4rem;
+	}
+}
+
+@keyframes animateLines {
+	100% {
+		transform: scaleX(1);
 	}
 }
 
@@ -43,19 +129,7 @@ footer {
 	justify-content: center;
 }
 
-.hero-visual-wrapper {
-	width: 100vw;
-	height: 70vh;
 
-	.hero-visual {
-		width: 100%;
-		height: 100%;
-		background-image: url(https://images.squarespace-cdn.com/content/v1/56f394cf8a65e2cb64955f42/1569479182214-C1G8Z97QWD1HC3VZ3VKZ/Zendaya+in+Wonderland+Magazine+shot+by+Petra+Collins);
-		background-position: 50%;
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-}
 
 .home-vision {
 	color: $dark;
