--- a/public/styles/scss/_header.scss
+++ b/public/styles/scss/_header.scss
@@ -7,14 +7,25 @@ header {
 	padding: 0 5rem;
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: space-between;
+	z-index: 99999;
+
+	.logo-wrapper {
+		width: 200px;
+		justify-self: center;
+	}
+
+	#header_logo {
+		width: 100%;
+		height: 100%;
+	}
 
 	.header-burger {
 		border-radius: 50%;
 		overflow: hidden;
 		background-color: transparent;
 		border: 0px;
-		width: 3.6rem;
+		width: 4.8rem;
 		height: 3.6rem;
 		display: flex;
 		align-items: center;
@@ -23,47 +34,37 @@ header {
 		position: relative;
 		padding: 0.4rem;
 		background-color: $light;
-		border: 0.8px solid $dark;
 
-		&::after {
-			content: "";
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%) scale3d(0, 0, 0);
-			width: 100%;
-			height: 100%;
-			background-color: $dark;
-			border-radius: 50%;
-
-			z-index: 0;
-			transition: 500ms ease-out;
-			transform-origin: center;
-		}
 
 		span {
-			width: 100%;
-			height: 2px;
+
+			height: 4px;
 			background-color: $dark;
 			z-index: 1;
+			transition: 300ms ease;
+			margin-left: auto;
 		}
 
 		.top {
 			margin-bottom: 3px;
+			width: 70%;
+			
 		}
 
 		.bottom {
-			margin-top: 2px;
+			margin-top: 15px;
+			width: 100%;
 		}
 
-		&:hover::after {
-			transform: translate(-50%, -50%) scale3d(2, 2, 2);
-		}
+		&:hover {
+			.top {
+				width: 100%;
+			}
 
-		&:hover span {
-			background-color: $light;
+			.bottom {
+				width: 70%;
+			}
 		}
-
 	}
 
 	nav {
