--- a/public/styles/scss/_components.scss
+++ b/public/styles/scss/_components.scss
@@ -6,7 +6,15 @@ li {
 	list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+p,
+a,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-weight: 200;
 }
 
@@ -129,13 +137,13 @@ footer {
 	justify-content: center;
 }
 
-
-
 .home-vision {
 	color: $dark;
 }
 
 footer {
+	
+
 	.top-paper {
 		background-color: $light;
 		img {
