--- a/public/styles/scss/_header.scss
+++ b/public/styles/scss/_header.scss
@@ -1,18 +1,26 @@
 header {
 	width: 100%;
+	display: block;
 	height: 100px;
 	position: fixed;
 	top: 0;
 	left: 0;
-	padding: 0 5rem;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
+	padding: $pd-sm;
 	z-index: 99999;
 
 	.logo-wrapper {
 		width: 200px;
-		justify-self: center;
+
+		a {
+			height: 100%;
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 	}
 
 	#header_logo {
@@ -22,7 +30,6 @@ header {
 
 	.header-burger {
 		border-radius: 50%;
-		overflow: hidden;
 		background-color: transparent;
 		border: 0px;
 		width: 4.8rem;
@@ -34,6 +41,7 @@ header {
 		position: relative;
 		padding: 0.4rem;
 		background-color: $light;
+		margin-left: auto;
 
 
 		span {
@@ -41,7 +49,7 @@ header {
 			height: 4px;
 			background-color: $dark;
 			z-index: 1;
-			transition: 300ms ease;
+		
 			margin-left: auto;
 		}
 
