--- a/public/styles/scss/_specific.scss
+++ b/public/styles/scss/_specific.scss
@@ -12,7 +12,6 @@
 		clip-path: url("#home-clip");
 		object-fit: cover;
 		z-index: 999;
-		
 
 		&__inner {
 			margin-top: 5vw;
@@ -37,7 +36,10 @@
 			font-size: 10rem;
 			text-transform: uppercase;
 			text-align: center;
-
 		}
 	}
+}
+
+.burger-is-hovered {
+	transition: 300ms;
 }
