--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -117,3 +117,10 @@
 	top: 0;
 	left: 0;
 }
+
+.-absolute-center {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
