--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -55,138 +55,9 @@
 :export {
   light: #f9f7f1;
   dark: #201F1F;
-  yellow: #F0D549;
+  yellow: #f7e27c;
   red: #d95133;
   blue: #276dc9;
-}
-
-.-flex {
-  display: flex;
-}
-
-.-flex-center {
-  align-items: center;
-  justify-content: center;
-}
-
-.-flex-col {
-  flex-direction: column;
-}
-
-.-flex-bet {
-  justify-content: space-between;
-}
-
-.-align-end {
-  align-items: flex-end;
-}
-
-.-just-end {
-  justify-content: flex-end;
-}
-
-.-pg-md {
-  font-size: 3.2rem;
-  line-height: 3.4rem;
-}
-
-.-bg-dark {
-  background-color: #201F1F;
-}
-
-.-bg-light {
-  background-color: #f9f7f1;
-}
-
-.-bg-yellow {
-  background-color: #F0D549;
-}
-
-.-bg-blue {
-  background-color: #276dc9;
-}
-
-.-bg-red {
-  background-color: #d95133;
-}
-
-.-big {
-  font-size: 4rem;
-  letter-spacing: 0.1rem;
-  line-height: 9rem;
-}
-
-.-xl {
-  font-size: 5.9rem;
-  line-height: 6rem !important;
-  letter-spacing: -0.2rem;
-}
-
-.-indent {
-  text-indent: 4em;
-}
-
-.-txt-dark {
-  color: #201F1F;
-}
-
-.-txt-light {
-  color: #f9f7f1;
-}
-
-.-pd-sm {
-  padding: 1rem;
-}
-
-.-pd-md {
-  padding: 4rem;
-}
-
-.fade-up-rows .line-wrapper {
-  overflow: hidden;
-}
-
-.fade-up-rows .line-wrapper .line {
-  transform: translateY(100%);
-}
-
-.-fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.-fixed-left {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.-fixed-right {
-  position: fixed;
-  top: 0;
-  right: 0;
-}
-
-.is-hidden {
-  transform: translateY(-100%);
-}
-
-.-absolute {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.-absolute-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.-fill-light {
-  fill: #f9f7f1;
 }
 
 header {
@@ -339,7 +210,6 @@ a:hover {
   width: 100%;
   z-index: 9999;
   background-color: white;
-  transform: translateY(-100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -428,12 +298,6 @@ a:hover {
   padding: 0.4rem;
 }
 
-@keyframes animateLines {
-  100% {
-    transform: scaleX(1);
-  }
-}
-
 section,
 footer {
   min-height: 100vh;
@@ -511,6 +375,29 @@ footer .content .contact-info > div:not(:last-of-type) {
   margin-right: 6rem;
 }
 
+.slider-wrapper {
+  width: 100vw;
+  height: 500px;
+  background-color: blue;
+  position: absolute;
+}
+
+.slider-wrapper .slider-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200vw;
+  height: 100%;
+}
+
+.slider-wrapper .slider-inner .slider-item {
+  margin: 0 4rem;
+  display: inline-block;
+  width: 400px;
+  height: 100%;
+  background-color: white;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -529,17 +416,172 @@ body {
   }
 }
 
-.hero-section {
-  position: relative;
+.-flex {
+  display: flex;
 }
 
-.hero-section div {
+.-flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.-flex-col {
+  flex-direction: column;
+}
+
+.-flex-bet {
+  justify-content: space-between;
+}
+
+.-align-end {
+  align-items: flex-end;
+}
+
+.-just-end {
+  justify-content: flex-end;
+}
+
+.-pg-md {
+  font-size: 3.2rem;
+  line-height: 3.4rem;
+}
+
+.-bg-dark {
+  background-color: #201F1F;
+}
+
+.-bg-light {
+  background-color: #f9f7f1;
+}
+
+.-bg-yellow {
+  background-color: #f7e27c;
+}
+
+.-bg-blue {
+  background-color: #276dc9;
+}
+
+.-bg-red {
+  background-color: #d95133;
+}
+
+.-big {
+  font-size: 4rem;
+  letter-spacing: 0.1rem;
+  line-height: 9rem;
+}
+
+.-xl {
+  font-size: 5.9rem;
+  line-height: 6rem !important;
+  letter-spacing: -0.2rem;
+}
+
+.-indent {
+  text-indent: 4em;
+}
+
+.-txt-xs {
+  font-size: 1.8rem;
+}
+
+.-txt-dark {
+  color: #201F1F;
+}
+
+.-txt-light {
+  color: #f9f7f1;
+}
+
+.-pd-sm {
+  padding: 1rem;
+}
+
+.-pd-md {
+  padding: 4rem;
+}
+
+.fade-up-rows .line-wrapper {
+  overflow: hidden;
+}
+
+.fade-up-rows .line-wrapper .line {
+  transform: translateY(100%);
+}
+
+.-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.-fixed-left {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.-fixed-right {
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.is-hidden {
+  transform: translateY(-100%);
+}
+
+.-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.-absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.-fill-light {
+  fill: #f9f7f1;
+}
+
+.section-heading-indent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 2em;
+  margin-left: 1em;
+  width: auto;
+  height: auto;
+}
+
+.is-off {
+  display: none;
+}
+
+.is-active {
+  display: block;
+}
+
+.hero-section {
+  position: relative;
+  height: 150vh;
+}
+
+.hero-section .hero-heading {
+  visibility: hidden;
+}
+
+.hero-section > div {
   width: 100%;
   height: 100%;
 }
 
 .hero-section .revealer {
-  height: 100%;
   width: 100%;
   clip-path: url("#home-clip");
   object-fit: cover;
@@ -547,8 +589,10 @@ body {
 }
 
 .hero-section .revealer__inner {
-  margin-top: 5vw;
+  margin-top: 15em;
   height: auto;
+  position: relative;
+  padding: 1rem;
 }
 
 .hero-section .revealer p {
@@ -563,6 +607,7 @@ body {
   z-index: 0;
   top: 0;
   left: 0;
+  height: 100vh;
 }
 
 .hero-section .to-be-revealed h1 {
