--- a/public/styles/scss/_specific.scss
+++ b/public/styles/scss/_specific.scss
@@ -1,22 +1,30 @@
 .hero-section {
 	position: relative;
+	height: 150vh;
 
-	div {
+	.hero-heading {
+		visibility: hidden;
+	}
+
+	> div {
 		width: 100%;
 		height: 100%;
 	}
 
 	.revealer {
-		height: 100%;
 		width: 100%;
 		clip-path: url("#home-clip");
 		object-fit: cover;
 		z-index: 999;
 
 		&__inner {
-			margin-top: 5vw;
+			margin-top: 15em;
 			height: auto;
+			position: relative;
+			padding: $pd-sm;			
 		}
+
+		
 
 		p {
 			display: block;
@@ -31,6 +39,7 @@
 		z-index: 0;
 		top: 0;
 		left: 0;
+		height: 100vh;
 
 		h1 {
 			font-size: 10rem;
