Work on slider + config burger

--- a/public/styles/scss/_specific.scss
+++ b/public/styles/scss/_specific.scss
@@ -52,3 +52,12 @@
 .burger-is-hovered {
 	transition: 300ms;
 }
+
+#draggable-follower {
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
+	background-color: $red;
+	transform: translate(-50%, -50%);
+	z-index: 999;
+}
