--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -123,14 +123,6 @@ header .header-burger .bottom {
   width: 100%;
 }
 
-header .header-burger:hover .top {
-  width: 100%;
-}
-
-header .header-burger:hover .bottom {
-  width: 70%;
-}
-
 header nav {
   width: 100%;
   height: 100%;
@@ -377,8 +369,7 @@ footer .content .contact-info > div:not(:last-of-type) {
 
 .slider-wrapper {
   width: 100vw;
-  height: 500px;
-  background-color: blue;
+  height: 700px;
   position: absolute;
 }
 
@@ -388,14 +379,37 @@ footer .content .contact-info > div:not(:last-of-type) {
   left: 0;
   width: 200vw;
   height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .slider-wrapper .slider-inner .slider-item {
   margin: 0 4rem;
-  display: inline-block;
-  width: 400px;
-  height: 100%;
+  position: relative;
+  width: 50vw;
+  height: 50vw;
+  max-height: 100%;
+  max-width: 500px;
   background-color: white;
+  overflow: hidden;
+}
+
+.slider-wrapper .slider-inner .slider-item .slider-img {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+@media screen and (max-width: 700px) {
+  .slider-wrapper {
+    height: 70vw !important;
+  }
+  .slider-item {
+    margin: 0 1rem !important;
+    height: 100% !important;
+    width: auto;
+  }
 }
 
 body {
@@ -529,7 +543,13 @@ body {
 }
 
 .is-hidden {
+  opacity: 0;
   transform: translateY(-100%);
+}
+
+.is-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .-absolute {
@@ -565,6 +585,14 @@ body {
 
 .is-active {
   display: block;
+}
+
+.is-burger:hover .top {
+  width: 100%;
+}
+
+.is-burger:hover .bottom {
+  width: 70%;
 }
 
 .hero-section {
@@ -618,6 +646,15 @@ body {
 
 .burger-is-hovered {
   transition: 300ms;
+}
+
+#draggable-follower {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: #d95133;
+  transform: translate(-50%, -50%);
+  z-index: 999;
 }
 
 * {
