--- a/public/styles/scss/_components.scss
+++ b/public/styles/scss/_components.scss
@@ -197,8 +197,8 @@ footer {
 
 .slider-wrapper {
 	width: 100vw;
-	height: 500px;
-	background-color: blue;
+	height: 700px;
+	
 	position: absolute;
 
 	.slider-inner {
@@ -207,13 +207,45 @@ footer {
 		left: 0;
 		width: 200vw;
 		height: 100%;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
 
 		.slider-item {
 			margin: 0 4rem;
-			display: inline-block;
-			width: 400px;
-			height: 100%;
+			position: relative;
+			width: 50vw;
+			height: 50vw;
+			max-height: 100%;
+			max-width: 500px;
 			background-color: white;
+			overflow: hidden;
+
+			.slider-img {
+				height: 100%;
+				background-size: cover;
+				background-position: center;
+			}
+
 		}
 	}
 }
+
+@media screen and (max-width: 700px) {
+
+
+	.slider-wrapper {
+		height: 70vw !important;
+	}
+
+	.slider-item {
+		margin: 0 1rem !important;
+		height: 100% !important;
+		width: auto;
+	}
+
+
+}
+
+
+
