--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -113,8 +113,15 @@
 }
 
 .is-hidden {
+	opacity: 0;
 	transform: translateY(-100%);
 }
+
+.is-visible {
+	opacity: 1;
+	transform: translateY(0);
+}
+
 
 
 
@@ -153,4 +160,16 @@
 
 .is-active {
 	display: block;
+}
+
+.is-burger {
+	&:hover {
+		.top {
+			width: 100%;
+		}
+
+		.bottom {
+			width: 70%;
+		}
+	}
 }
