--- a/public/styles/scss/_config.scss
+++ b/public/styles/scss/_config.scss
@@ -3,7 +3,11 @@
 @font-face {
   font-family: 'Kobe';
   src: url('/Kobe1.1-Regular.woff') format('woff'),
+}
 
+@font-face {
+  font-family: 'Formula';
+  src: url('/FormulaCondensed-Bold.otf')
 }
 
 @media (max-width:699px) {
