--- a/public/styles/scss/_header.scss
+++ b/public/styles/scss/_header.scss
@@ -1,6 +1,5 @@
 header {
 	width: 100%;
-	display: block;
 	height: 100px;
 	position: fixed;
 	top: 0;
@@ -27,39 +26,6 @@ header {
 		width: 100%;
 		height: 100%;
 		transition: 300ms ease;
-	}
-
-	.header-burger {
-		border-radius: 50%;
-		background-color: transparent;
-		border: 0px;
-		width: 4.8rem;
-		height: 3.6rem;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-		position: relative;
-		padding: 0.4rem;
-		margin-left: auto;
-
-		span {
-			height: 4px;
-
-			z-index: 1;
-
-			margin-left: auto;
-		}
-
-		.top {
-			margin-bottom: 3px;
-			width: 70%;
-		}
-
-		.bottom {
-			margin-top: 15px;
-			width: 100%;
-		}
 	}
 
 	nav {
@@ -101,7 +67,7 @@ header {
 [data-theme="dark"] {
 	#header-logo {
 		fill: $light;
-	};
+	}
 
 	.header-burger span {
 		background-color: $light;
@@ -111,9 +77,25 @@ header {
 [data-theme="light"] {
 	#header-logo {
 		fill: $dark;
-	};
+	}
 
 	.header-burger span {
 		background-color: $dark;
+	}
+}
+
+.header-burger {
+	border-radius: 50%;
+	background-color: transparent;
+	border: 0px;
+	width: 4.8rem;
+	height: 2rem;
+
+	position: relative;
+	padding: 0.4rem;
+	margin-left: auto;
+
+	span {
+		transition: 400ms ease;
 	}
 }
