--- a/public/styles/scss/_wraps.scss
+++ b/public/styles/scss/_wraps.scss
@@ -10,6 +10,12 @@ body {
   z-index: -1;
 }
 
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 @media screen and (min-width: 1400px) {
   .o-wrapper {
     padding: 0 15rem;
