--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -5,8 +5,9 @@
 @import "header";
 @import "components";
 @import "wraps";
-@import "utils";
+
 @import "specific";
+@import "utils";
 
 * {
 	box-sizing: border-box;
@@ -15,6 +16,7 @@
 }
 
 html {
+
 	height: 100%;
 	width: 100%;
 	font-family: "Kobe";
@@ -22,5 +24,8 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: none;
-	
+}
+
+main {
+	min-height: 100vh;
 }
