--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -1,12 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
 @font-face {
   font-family: 'Kobe';
-  src: url("/Kobe1.1-Regular.woff") format("woff");
+  font-weight: 200;
+  src: url("../../KobeRegular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Formula';
-  src: url("/FormulaCondensed-Bold.otf");
+  font-family: 'FK';
+  font-weight: 200;
+  src: url("../../FKScreamerMedium.otf") format("woff");
+}
+
+@font-face {
+  font-family: 'FK';
+  font-weight: 400;
+  src: url("../../FKScreamerBold.otf") format("woff");
+}
+
+@font-face {
+  font-family: 'FK';
+  font-weight: 600;
+  src: url("../../FKScreamerBlack.otf") format("woff");
 }
 
 @media (max-width: 699px) {
@@ -129,28 +142,13 @@ header .bg-dynamic {
   transform: translateY(-100%);
 }
 
-[data-theme="dark"] #header-logo {
-  fill: #f9f7f1;
-}
-
-[data-theme="dark"] .header-burger span {
-  background-color: #f9f7f1;
-}
-
-[data-theme="light"] #header-logo {
-  fill: #201F1F;
-}
-
-[data-theme="light"] .header-burger span {
-  background-color: #201F1F;
-}
-
 .header-burger {
   border-radius: 50%;
   background-color: transparent;
   border: 0px;
   width: 4.8rem;
   height: 2rem;
+  overflow: visible;
   position: relative;
   padding: 0.4rem;
   margin-left: auto;
@@ -158,25 +156,89 @@ header .bg-dynamic {
 
 .header-burger span {
   transition: 400ms ease;
+  background-color: black;
+  width: 100%;
+  height: 3px;
+  position: absolute;
+  right: 0;
+}
+
+.header-burger span.bottom {
+  bottom: 0;
+}
+
+.header-burger span.top {
+  top: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  header .logo-wrapper {
+    width: 200px;
+  }
+  .header-burger {
+    width: 4.8rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  header .logo-wrapper {
+    width: 150px;
+  }
+  .header-burger {
+    width: 4.2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  header .logo-wrapper {
+    width: 150px;
+  }
+  .header-burger {
+    width: 3.6rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  header .logo-wrapper {
+    width: 140px;
+  }
+  .header-burger {
+    width: 3.2rem;
+    height: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  header .logo-wrapper {
+    width: 130px;
+  }
+  .header-burger {
+    width: 2.8rem;
+    height: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  header .logo-wrapper {
+    width: 130px;
+  }
+  .header-burger {
+    width: 2.6rem;
+    height: 1rem;
+  }
 }
 
 a,
 ul,
 li {
   text-decoration: none;
-  color: black;
+  color: inherit;
   list-style: none;
 }
 
 p,
 a,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+li {
   font-weight: 200;
 }
 
@@ -224,7 +286,6 @@ a:hover {
 }
 
 .viewport-nav .viewport-nav__inner .right-col ul li:hover a {
-  color: #f9f7f1;
   transition: 300ms ease;
 }
 
@@ -278,13 +339,6 @@ a:hover {
   padding: 0.4rem;
 }
 
-section,
-footer {
-  min-height: 100vh;
-  width: 100%;
-  color: #f9f7f1;
-}
-
 .home-intro-wrapper {
   display: flex;
   align-items: flex-end;
@@ -293,66 +347,6 @@ footer {
 
 .home-vision {
   color: #201F1F;
-}
-
-footer .top-paper {
-  background-color: #f9f7f1;
-}
-
-footer .top-paper img {
-  display: block;
-  margin: 0 auto;
-  width: 120%;
-  margin-bottom: -13vw;
-  margin-left: -2%;
-}
-
-footer .content {
-  height: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-footer .content .heading {
-  width: 500px;
-  line-height: 3.5rem;
-  margin-bottom: 12rem;
-}
-
-footer .content .heading .ear-footer {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  margin: 0 -14px;
-}
-
-footer .content .heading .ear-footer svg {
-  height: 90px;
-}
-
-footer .content .heading .ear-footer svg path {
-  fill: #f9f7f1;
-}
-
-footer .content .contact-info {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-}
-
-footer .content .contact-info a,
-footer .content .contact-info p {
-  font-size: 2rem;
-  display: block;
-}
-
-footer .content .contact-info span {
-  display: block;
-  margin-bottom: 2em;
-}
-
-footer .content .contact-info > div:not(:last-of-type) {
-  margin-right: 6rem;
 }
 
 .slider-wrapper {
@@ -469,7 +463,7 @@ body {
 }
 
 .hero-section .to-be-revealed h1 {
-  font-size: 10rem;
+  font-size: inherit;
   text-transform: uppercase;
   text-align: center;
 }
@@ -488,32 +482,23 @@ body {
 }
 
 .-thick {
-  font-family: "Formula";
+  font-family: "FK";
 }
 
 .-flex {
   display: flex;
 }
 
-.-flex-center {
-  align-items: center;
+.-justify-center {
   justify-content: center;
 }
 
-.-flex-col {
+.-column {
   flex-direction: column;
 }
 
-.-flex-bet {
-  justify-content: space-between;
-}
-
-.-align-end {
-  align-items: flex-end;
-}
-
-.-just-end {
-  justify-content: flex-end;
+.-align-center {
+  align-items: center;
 }
 
 .-pg-md {
@@ -568,7 +553,7 @@ body {
 }
 
 .-pd-md {
-  padding: 4rem;
+  padding: 4vw;
 }
 
 .fade-up-rows .line-wrapper {
@@ -624,45 +609,6 @@ body {
   fill: #f9f7f1;
 }
 
-.section-heading-indent {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 2em;
-  margin-left: 1em;
-  width: auto;
-  height: auto;
-}
-
-.is-burger span {
-  height: 4px;
-  right: 0;
-  z-index: 1;
-  margin-left: auto;
-}
-
-.is-burger .top {
-  position: absolute;
-  top: 0;
-  margin-bottom: 3px;
-  width: 70%;
-}
-
-.is-burger .bottom {
-  margin-top: 15px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-}
-
-.is-burger:hover .top {
-  width: 100%;
-}
-
-.is-burger:hover .bottom {
-  width: 70%;
-}
-
 .is-x {
   transform: rotate(360deg);
   transform-origin: center;
@@ -708,34 +654,68 @@ body {
   transform: translateX(-100%);
 }
 
+.-heading-medium {
+  font-family: "FK";
+  font-weight: 200;
+}
+
+.-heading-bold {
+  font-family: "FK";
+  font-weight: 400;
+}
+
+.-heading-black {
+  font-family: "FK";
+  font-weight: 600;
+}
+
+.-heading-black.-heading-large {
+  font-size: 6rem;
+  line-height: 9rem;
+}
+
+.-xl {
+  font-size: 30rem;
+  text-transform: uppercase;
+}
+
 @media screen and (min-width: 1200px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 5.9rem;
-    line-height: 5.8rem;
+    line-height: 5rem;
     letter-spacing: -0.2rem;
   }
 }
 
 @media screen and (max-width: 1200px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 5.5rem;
     line-height: 5.3rem;
     letter-spacing: -0.2rem;
   }
+  .heading-wrapper.-xl {
+    font-size: 25rem;
+  }
 }
 
 @media screen and (max-width: 900px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 4.3rem;
     line-height: 4rem;
     letter-spacing: -0.1rem;
   }
+  .heading-wrapper.-xl {
+    font-size: 23rem;
+  }
 }
 
 @media screen and (max-width: 700px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 3rem;
     line-height: 3rem;
+  }
+  .heading-wrapper.-xl {
+    font-size: 16rem;
   }
   .revealer__inner {
     margin-top: 0;
@@ -743,23 +723,32 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 2.5rem;
-    line-height: 2.8rem;
+    line-height: 2.2rem;
+  }
+  .heading-wrapper.-xl {
+    font-size: 11rem;
   }
 }
 
 @media screen and (max-width: 375px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 2rem;
     line-height: 2.1rem;
+  }
+  .heading-wrapper.-xl {
+    font-size: 9rem;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .-xl {
+  .paragraph-wrapper.-large p {
     font-size: 1.8rem;
     line-height: 2rem;
+  }
+  .heading-wrapper.-xl {
+    font-size: 6.3rem;
   }
 }
 
@@ -769,11 +758,11 @@ body {
   padding: 0;
 }
 
-html {
+html, p {
   height: 100%;
   width: 100%;
-  font-family: "Kobe";
   line-height: 1.6;
+  font-family: 'Kobe';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: none;
