--- a/public/styles/scss/_header.scss
+++ b/public/styles/scss/_header.scss
@@ -64,25 +64,6 @@ header {
 	}
 }
 
-[data-theme="dark"] {
-	#header-logo {
-		fill: $light;
-	}
-
-	.header-burger span {
-		background-color: $light;
-	}
-}
-
-[data-theme="light"] {
-	#header-logo {
-		fill: $dark;
-	}
-
-	.header-burger span {
-		background-color: $dark;
-	}
-}
 
 .header-burger {
 	border-radius: 50%;
@@ -90,12 +71,87 @@ header {
 	border: 0px;
 	width: 4.8rem;
 	height: 2rem;
-
+	overflow: visible;
 	position: relative;
 	padding: 0.4rem;
 	margin-left: auto;
 
 	span {
 		transition: 400ms ease;
+		background-color: black;
+		width: 100%;
+		height: 3px;
+		position: absolute;
+		right: 0;
+		
+		&.bottom {
+			bottom: 0;
+		}
+
+		&.top {
+			top: 0;
+		}
 	}
 }
+
+//header media queries 
+@media screen and (max-width: 1200px) {
+	header .logo-wrapper {
+		width: 200px;
+	}
+
+	.header-burger {
+		width: 4.8rem;
+	}
+
+}
+
+@media screen and (max-width: 900px) {
+	header .logo-wrapper {
+		width: 150px;
+	}
+	.header-burger {
+		width: 4.2rem;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	header .logo-wrapper {
+		width: 150px;
+	}
+
+	.header-burger {
+		width: 3.6rem;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	header .logo-wrapper {
+		width: 140px;
+	}
+	.header-burger {
+		width: 3.2rem;
+		height: 1.3rem;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	header .logo-wrapper {
+		width: 130px;
+	}
+	.header-burger {
+		width: 2.8rem;
+		height: 1.3rem;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	header .logo-wrapper {
+		width: 130px;
+	}
+	.header-burger {
+		width: 2.6rem;
+		height: 1rem;
+	}
+}
+
