--- a/public/styles/scss/_config.scss
+++ b/public/styles/scss/_config.scss
@@ -7,22 +7,11 @@
 }
 
 @font-face {
-  font-family: 'FK';
+  font-family: 'Kobe Bold';
   font-weight: 200;
-  src: url('../../FKScreamerMedium.otf') format('woff');
+  src: url('../../Kobe1.1-Bold.woff') format('woff');
 }
 
-@font-face {
-  font-family: 'FK';
-  font-weight: 400;
-  src: url('../../FKScreamerBold.otf') format('woff');
-}
-
-@font-face {
-  font-family: 'FK';
-  font-weight: 600;
-  src: url('../../FKScreamerBlack.otf') format('woff');
-}
 
 
 
