--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -5,21 +5,9 @@
 }
 
 @font-face {
-  font-family: 'FK';
+  font-family: 'Kobe Bold';
   font-weight: 200;
-  src: url("../../FKScreamerMedium.otf") format("woff");
-}
-
-@font-face {
-  font-family: 'FK';
-  font-weight: 400;
-  src: url("../../FKScreamerBold.otf") format("woff");
-}
-
-@font-face {
-  font-family: 'FK';
-  font-weight: 600;
-  src: url("../../FKScreamerBlack.otf") format("woff");
+  src: url("../../Kobe1.1-Bold.woff") format("woff");
 }
 
 @media (max-width: 699px) {
@@ -402,6 +390,11 @@ body {
   padding: 0 4em;
 }
 
+.c-section {
+  min-height: 100vh;
+  width: 100%;
+}
+
 .vision-section {
   z-index: -1;
 }
@@ -418,54 +411,36 @@ body {
   }
 }
 
-.hero-section {
-  position: relative;
-  height: 150vh;
+.section-hero__title-wrapper {
+  width: 89vw;
+  height: 40vw;
 }
 
-.hero-section #hero-heading {
-  font-size: 20rem;
-  color: #d95133;
+.section-hero__title-wrapper .section-hero__title__part:nth-of-type(2) {
+  left: 32vw;
 }
 
-.hero-section > div {
-  width: 100%;
-  height: 100%;
+.section-hero__title-wrapper .section-hero__title__part:nth-of-type(3) {
+  right: 0;
 }
 
-.hero-section .revealer {
-  width: 100%;
-  clip-path: url("#home-clip");
-  object-fit: cover;
-  z-index: 999;
+.section-hero__title-wrapper .section-hero__title__part:nth-of-type(4) {
+  top: 7vw;
 }
 
-.hero-section .revealer__inner {
-  margin-top: 15em;
-  height: auto;
-  position: relative;
-  padding: 1rem;
+.section-hero__title-wrapper .section-hero__title__part:nth-of-type(5) {
+  bottom: 0;
+  left: 40vw;
 }
 
-.hero-section .revealer p {
-  display: block;
+.section-hero__title-wrapper .section-hero__title__part:nth-of-type(6) {
+  bottom: 0;
+  right: 0;
 }
 
-.hero-section .to-be-revealed {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  height: 100vh;
-}
-
-.hero-section .to-be-revealed h1 {
-  font-size: inherit;
-  text-transform: uppercase;
-  text-align: center;
+.heroText {
+  font-size: 13vw;
+  letter-spacing: -1vw;
 }
 
 .burger-is-hovered {
@@ -481,23 +456,23 @@ body {
   z-index: 999;
 }
 
-.-thick {
-  font-family: "FK";
+.word-wrapper {
+  overflow: hidden;
 }
 
-.-flex {
+.-display-flex {
   display: flex;
 }
 
-.-justify-center {
+.-justify-content-center {
   justify-content: center;
 }
 
-.-column {
+.-flex-column {
   flex-direction: column;
 }
 
-.-align-center {
+.-align-items-center {
   align-items: center;
 }
 
@@ -592,17 +567,27 @@ body {
   transform: translateY(0);
 }
 
-.-absolute {
+.-position-absolute {
   position: absolute;
-  top: 0;
-  left: 0;
 }
 
-.-absolute-center {
+.-position-absolute-center {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.-position-relative {
+  position: relative;
+}
+
+.-w-100 {
+  width: 100%;
+}
+
+.-h-100 {
+  height: 100%;
 }
 
 .-fill-light {
@@ -654,14 +639,8 @@ body {
   transform: translateX(-100%);
 }
 
-.-heading-medium {
-  font-family: "FK";
-  font-weight: 200;
-}
-
 .-heading-bold {
-  font-family: "FK";
-  font-weight: 400;
+  font-family: "Kobe Bold";
 }
 
 .-heading-black {
