--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -1,24 +1,24 @@
-.-thick {
-	font-family: $thick;
-}
 
+.word-wrapper {
+	overflow: hidden;
+}
 
 
 //Flex utilities
 
-.-flex {
+.-display-flex {
 	display: flex;
 }
 
-.-justify-center {
+.-justify-content-center {
 	justify-content: center;
 }
 
-.-column {
+.-flex-column {
 	flex-direction: column;
 }
 
-.-align-center {
+.-align-items-center {
 	align-items: center;
 }
 
@@ -26,6 +26,8 @@
 	font-size: 3.2rem;
 	line-height: 3.4rem;
 }
+
+
 
 .-bg-dark {
 	background-color: $dark;
@@ -115,17 +117,27 @@
 	transform: translateY(0);
 }
 
-.-absolute {
+.-position-absolute {
 	position: absolute;
-	top: 0;
-	left: 0;
 }
 
-.-absolute-center {
+.-position-absolute-center {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.-position-relative {
+	position: relative;
+}
+
+.-w-100 {
+	width: 100%;
+}
+
+.-h-100 {
+	height: 100%;
 }
 
 .-fill-light {
@@ -180,14 +192,12 @@
 }
 
 //Heading utilities
-.-heading-medium {
-	font-family: $thick;
-	font-weight: 200;
-}
+
+
+
 
 .-heading-bold {
-	font-family: $thick;
-	font-weight: 400;
+	font-family: $bold;
 }
 
 .-heading-black {
