--- a/public/styles/scss/_vars.scss
+++ b/public/styles/scss/_vars.scss
@@ -9,6 +9,16 @@ $pd-sm: 1rem;
 $mg-sm: 1rem;
 $bold: 'Kobe Bold';
 
+//Media Query Devices
+
+$mobileS: (max-width: 320px);
+$mobileM: (max-width: 375px);
+$mobileL: (max-width: 425px);
+$tablet: (max-width: 768px);
+$laptop: (max-width: 1024px);
+$laptopL: (max-width: 1440px);
+$desktop: (max-width: 2560px);
+
 
 :export {
   light: $light;
@@ -17,4 +27,6 @@ $bold: 'Kobe Bold';
   red: $red;
   blue: $blue
 }
+
+
 
