--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -22,11 +22,16 @@
 	align-items: center;
 }
 
-.-pg-md {
-	font-size: 3.2rem;
-	line-height: 3.4rem;
+.-pg-large {
+	font-size: 4.8rem;
+	line-height: 5rem;
 }
 
+.-pg-medium {
+	font-size: 3rem;
+	line-height: 3rem;
+	margin-top: 3rem;
+}
 
 
 .-dark {
