--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -212,6 +212,21 @@
 	font-family: $bold;
 }
 
+.-heading-medium {
+	font-family: 'Kobe';
+	font-size: 6rem;
+	line-height:4.86rem;
+	letter-spacing: -0.4rem;
+}
+
+.-fw-400 {
+	font-family: $bold;
+}
+
+.-fw-200 {
+	font-weight: 200;
+}
+
 .-heading-black {
 	font-family: "FK";
 	font-weight: 600;
