--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -796,27 +796,27 @@ body {
   width: 20vw;
 }
 
-.how-grid__one {
+.how-grid__1 {
   grid-column: span 4;
   grid-row: 1/2;
 }
 
-.how-grid__two {
+.how-grid__2 {
   grid-column: 5/9;
   grid-row: 2/3;
 }
 
-.how-grid__three {
+.how-grid__3 {
   grid-column: 9/13;
   grid-row: 4/5;
 }
 
-.how-grid__four {
+.how-grid__4 {
   grid-column: 5/9;
   grid-row: 5/6;
 }
 
-.how-grid__five {
+.how-grid__5 {
   grid-column: 1/5;
   grid-row: 6/7;
 }
