--- a/public/styles/scss/_layout.scss
+++ b/public/styles/scss/_layout.scss
@@ -16,28 +16,28 @@
   }
 
 
-  &__one {
+  &__1 {
     grid-column: span 4;
     grid-row: 1/2
   }
 
-  &__two {
+  &__2 {
     grid-column: 5/9;
     grid-row: 2/3;
   }
 
 
-  &__three {
+  &__3 {
     grid-column: 9/13;
     grid-row: 4/5;
   }
 
-  &__four {
+  &__4 {
     grid-column: 5/9;
     grid-row: 5/6;
   }
 
-  &__five {
+  &__5 {
     grid-column: 1/5;
     grid-row: 6/7;
   }
