--- a/public/styles/scss/_layout.scss
+++ b/public/styles/scss/_layout.scss
@@ -1,48 +1,88 @@
 .grid {
-  display: grid;
+	display: grid;
 }
 
 .how-grid {
-  grid-template-columns: repeat(12, 1fr);
-  margin: 6vw;
-  grid-gap: 1.4vw;
+	grid-template-columns: repeat(12, 1fr);
+	margin: 6vw;
+	grid-gap: 1.4vw;
 
-  .paragraph-wrapper {
-    width: 14.583vw;
-  }
+	.paragraph-wrapper {
+		width: 14.583vw;
+	}
 
-  .-heading-medium  {
-    width: 20vw;
-  }
+	.heading-wrapper {
+		margin-bottom: 3em;
+	}
 
+	.-heading-medium {
+		width: 20vw;
+	}
 
-  &__1 {
-    grid-column: span 4;
-    grid-row: 1/2
-  }
+	&__1 {
+		grid-column: span 4;
+		grid-row: 1/2;
+	}
 
-  &__2 {
-    grid-column: 5/9;
-    grid-row: 2/3;
-  }
+	&__2 {
+		grid-column: 5/9;
+		grid-row: 2/3;
+	}
 
+	&__3 {
+		grid-column: 9/13;
+		grid-row: 4/5;
+	}
 
-  &__3 {
-    grid-column: 9/13;
-    grid-row: 4/5;
-  }
+	&__4 {
+		grid-column: 5/9;
+		grid-row: 5/6;
+	}
 
-  &__4 {
-    grid-column: 5/9;
-    grid-row: 5/6;
-  }
+	&__5 {
+		grid-column: 1/5;
+		grid-row: 6/7;
+	}
+}
 
-  &__5 {
-    grid-column: 1/5;
-    grid-row: 6/7;
-  }
-  
+@media only screen and (max-width: 600px) {
+	.how-grid {
+		grid-template-columns: repeat(6, 1fr);
+		margin: 6vw;
+		grid-gap: 1.4vw;
 
+		.paragraph-wrapper,
+		.-heading-medium {
+			width: 100%;
+			text-align: center;
+		}
 
-  
+		.heading-wrapper {
+			margin-bottom: 6vw;
+		}
+
+		.grid-col {
+			grid-column: span 6;
+			margin-bottom: 15vw;
+		}
+		&__1 {
+			grid-row: 1/2;
+		}
+
+		&__2 {
+			grid-row: 2/3;
+		}
+
+		&__3 {
+			grid-row: 4/5;
+		}
+
+		&__4 {
+			grid-row: 5/6;
+		}
+
+		&__5 {
+			grid-row: 6/7;
+		}
+	}
 }
